<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ManageMainActivity" >

    <Button
        android:id="@+id/doctorsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/green_button"
	    android:textColor="@android:color/white"
        android:textSize="16dip"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:text="@string/doc" 
        android:onClick="startDocMain"/>

    <Button
        android:id="@+id/devicesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_button"
	    android:textColor="@android:color/white"
        android:textSize="16dip"
        android:textStyle="bold"
        android:layout_below="@+id/doctorsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/dev" 
        android:onClick="startDevMain"/>

    <Button
        android:id="@+id/requestsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_button"
	    android:textColor="@android:color/white"
        android:textSize="16dip"
        android:textStyle="bold"
        android:layout_below="@+id/devicesButton"
        android:layout_centerHorizontal="true"
        android:text="@string/req" 
        android:onClick="startReqMain"/>

    <Button
        android:id="@+id/accountSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_button"
	    android:textColor="@android:color/white"
        android:textSize="16dip"
        android:textStyle="bold"
        android:layout_below="@+id/requestsButton"
        android:layout_centerHorizontal="true"
        android:text="@string/acs" 
        android:onClick="startAccSetsMain"/>

</RelativeLayout>